--- a/data/jobs.yaml
+++ b/data/jobs.yaml
@@ -18,16 +18,14 @@
   type: Postdoctoral Fellow
   project: Real-Time DTR & DER-Analytics Platform for NB Power
   description: Lead the development of a cloud-based Dynamic Thermal Rating and DER-analytics platform in partnership with NB Power. You will develop hybrid IEEE-738/ML models for conductor temperature prediction, build production-grade micro-services with CI/CD pipelines, lead field pilots on transmission corridors, and mentor graduate students.
-  requirements: >
-    <ul>
-    <li>PhD in Power Systems, Controls, or Applied Machine Learning.
-    <li>Minimum of three years of experience with utility data systems and line-rating or DTR projects
-    <li>Proficiency in Python, MATLAB, and modern software development practices (CI/CD, MLOps).
-    <li>Experience with PI/SCADA integration and containerized deployment.
-    <li>Strong documentation and training skills.
-    <li>Familiarity with IEEE-738 and IEC 62351 standards is an asset.
-    <li>Demonstrated ability to mentor students and communicate effectively with stakeholders.
-    </ul>
+  requirements: |
+    • PhD in Power Systems, Controls, or Applied Machine Learning.
+    • Minimum of three years of experience with utility data systems and line-rating or DTR projects.
+    • Proficiency in Python, MATLAB, and modern software development practices (CI/CD, MLOps).
+    • Experience with PI/SCADA integration and containerized deployment.
+    • Strong documentation and training skills.
+    • Familiarity with IEEE-738 and IEC 62351 standards is an asset.
+    • Demonstrated ability to mentor students and communicate effectively with stakeholders.
   start_date: January 2026
   deadline: Open until filled
   funding: ResearchNB Research Professional Fund
