adding customized data

--- a/data/jobs.yaml
+++ b/data/jobs.yaml
@@ -43,7 +43,7 @@
     <li>Deploy containerized services on NB Power's on-premises Kubernetes cluster</li>
     <li>Ensure system uptime ≥95% during pilot operations</li>
     <li>Configure secure MQTT data feeds from field sensors</li>
-    <li>Conduct 3-month live trials on two 138 kV transmission corridors</li>
+    <li>Conduct 3-month live trials on two transmission corridors</li>
     <li>Develop explainability dashboards and operator alarms</li>
     </ul>
     <em>Knowledge Transfer & Mentorship (40%)</em>
@@ -77,6 +77,6 @@
     <li>Competitive salary with benefits</li>
     <li>Access to UNB Smart Grid Lab (servers, MATLAB/COMSOL licenses)</li>
     <li>Direct collaboration with NB Power's transmission planning team</li>
-    <li>Professional development: IEEE PES tutorials, NB Innovation Week, UNB "Project Management for Researchers" micro-credential</li>
+    <li>Professional development</li>
     <li>Pathway to leadership roles in Atlantic Canada's clean-energy sector</li>
     </ul>
